--- a/src/styles/Product.module.scss
+++ b/src/styles/Product.module.scss
@@ -1,5 +1,12 @@
 @import './variables';
 
+.product__loader__container {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+}
+
 .product__section {
   height: 90vh;
   display: flex;
